Corretto il nome della classe del pulsante di accettazione dei cookie nel banner

--- a/cookie-banner.html
+++ b/cookie-banner.html
@@ -27,7 +27,7 @@ cookie-banner.html
             <a href="/cookie-policy.html" style="font-weight: normal;">Cookie Policy</a>.
         </p>
         <button id="decline-cookies" class="cookie-btn" onclick="allConsentDenied()" aria-label="Decline cookies">DECLINE</button>
-        <button id="accept-cookies" class="cookie-btn" onclick="allConsentGranted()" aria-label="Accept cookies">ACCEPT</button>
+        <button id="accept-cookies" class="cookie-bty" onclick="allConsentGranted()" aria-label="Accept cookies">ACCEPT</button>
     </div>
 </div>
 
