Corretto il nome della classe del pulsante di accettazione dei cookie nel banner e rimosso il testo descrittivo sui cookie.

--- a/cookie-banner.html
+++ b/cookie-banner.html
@@ -22,12 +22,8 @@ cookie-banner.html
     </p>
 
     <div id="cookie-banner-content" class="cookie-popup">
-        <p>
-            This website uses cookies to enhance your experience and analyze performance.
-            <a href="/cookie-policy.html" style="font-weight: normal;">Cookie Policy</a>.
-        </p>
         <button id="decline-cookies" class="cookie-btn" onclick="allConsentDenied()" aria-label="Decline cookies">DECLINE</button>
-        <button id="accept-cookies" class="cookie-btn" onclick="allConsentGranted()" aria-label="Accept cookies">ACCEPT</button>
+        <button id="accept-cookies" class="cookie-bty" onclick="allConsentGranted()" aria-label="Accept cookies">ACCEPT</button>
     </div>
 </div>
 
