Modificato il banner dei cookie: aggiunto testo "or" tra i pulsanti di accettazione e rifiuto e ridotto la dimensione del font nel banner.

--- a/cookie-banner.html
+++ b/cookie-banner.html
@@ -21,7 +21,7 @@ cookie-banner.html
     </p>
 
     <div id="cookie-banner-content" class="cookie-popup">
-        <button id="decline-cookies" class="cookie-btn" onclick="allConsentDenied()" aria-label="Decline cookies">DECLINE</button>
+        <button id="decline-cookies" class="cookie-btn" onclick="allConsentDenied()" aria-label="Decline cookies">DECLINE</button> or
         <button id="accept-cookies" class="cookie-btn" onclick="allConsentGranted()" aria-label="Accept cookies">ACCEPT</button>
     </div>
 </div>
