--- a/cookie-banner.html
+++ b/cookie-banner.html
@@ -22,7 +22,7 @@ cookie-banner.html
 
     <div id="cookie-banner-content" class="cookie-popup">
         <button id="decline-cookies" class="cookie-btn" onclick="allConsentDenied()" aria-label="Decline cookies">DECLINE</button> or
-        <button id="accept-cookies" class="cookie-btn" onclick="allConsentGranted()" aria-label="Accept cookies">ACCEPT</button>
+        <button id="accept-cookies" class="cookie-bty" onclick="allConsentGranted()" aria-label="Accept cookies">ACCEPT</button>
     </div>
 </div>
 
