--- a/header.html
+++ b/header.html
@@ -183,7 +183,7 @@ header.html
          padding: 1rem;
          text-align: center;
          box-shadow: 0 -2px 10px #242424;
-         font-size: 0.7rem;
+         font-size: 0.rem;
          z-index: 9999; /
      }
      #cookie-banner p {
