--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,7 @@ footer.html
 
 
  <footer> <b></b>
-    ©2025 <a href=https://genialabile.com style="font-weight: normal">GENiALABILE</a>.
+    ©2025 <a href="/" style="font-weight: normal">GENiALABILE</a>.
     All Rights Reserved.
     A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette"  style="font-weight: normal">seiseisette</a>.
     Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
