--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@ header.html
 <!-- Meta -->
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
- <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
+ <meta name="description" content="GENiALABILE - Advanced Bio-GPT inspiring multidimensional solutions and unlocking creative potential.">
 
  <!-- Titolo -->
  <title>GENiALABILE - Welcome</title>
