--- a/contacts.html
+++ b/contacts.html
@@ -359,7 +359,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <p>
                 <a href="https://genialabile.com"  style="font-weight: normal;">GENiALABILE</a> ✧⌝
                 <br>
-                667 Multidimensio Ave,
+                667 Multidimensional Ave,
                 <br>
                 GPT's City, API, 2025
             </p>
