Modificato il messaggio di errore nel caricamento del footer per riferirsi correttamente al banner.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                         footerContainer.innerHTML = data;
                         body.appendChild(footerContainer);
                     })
-                    .catch(error => console.error('Errore nel caricamento del footer:', error));
+                    .catch(error => console.error('Errore nel caricamento del banner:', error));
             });
         </script> <!-- Java Banner -->
       
