--- a/contacts.html
+++ b/contacts.html
@@ -410,7 +410,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                         footerContainer.innerHTML = data;
                         body.appendChild(footerContainer);
                     })
-                    .catch(error => console.error('Errore nel caricamento del footer:', error));
+                    .catch(error => console.error('Errore nel caricamento del banner:', error));
             });
         </script> <!-- Java Banner -->
         
