--- a/OLD_HoMe.html
+++ b/OLD_HoMe.html
@@ -7,7 +7,7 @@ A Bio-GPT Project—Designed by seiseisette.
 Licensed under the Apache License, Version 2.0.
 You may obtain a copy of the License at https://www.apache.org/licenses/LICENSE-2.0  
 ---
-genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
+https://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
 --->
 <!DOCTYPE html>
 <html lang="en">
