--- a/contacts.html
+++ b/contacts.html
@@ -304,13 +304,13 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <b>1. Website</b>
     <br><br>
         Visit our official website: 
-        <a href="https://genialabile.com" style="font-weight: normal;">genialabile.com</a>
+        <a href="/" style="font-weight: normal;">genialabile.com</a>
 
     <br><br><br>
     <b>2. Email</b>
-    <br><br>
+        <br><br>
         Reach us at: 
-        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For" style="font-weight: normal;">genialabile@gmail.com</a>
+            <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For" style="font-weight: normal;">genialabile@gmail.com</a>
 
     <br><br><br>
     <b>3. Social Media</b>
