Aggiornati i riferimenti al sito web in footer.html e header.html per una navigazione corretta.

--- a/header.html
+++ b/header.html
@@ -7,8 +7,8 @@ A Bio-GPT Project—Designed by seiseisette.
 Licensed under the Apache License, Version 2.0.
 You may obtain a copy of the License at https://www.apache.org/licenses/LICENSE-2.0  
 ---
-genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page   
-
+https://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
+--->
 header.html
 //-->
 
@@ -280,8 +280,5 @@ header.html
         color: #00ff00; 
         text-decoration: none;
     }
-
-   
-
 
 </style>
