Aggiornato il link in contacts.html per correggere l'URL di destinazione.

--- a/contacts.html
+++ b/contacts.html
@@ -88,7 +88,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                     <div class="card-text">
                         
                         <p>
-                            <a href="https://genialabile.com"  style="font-weight: normal;">GENiALABILE</a> ✧⌝
+                            <a href="/"  style="font-weight: normal;">GENiALABILE</a> ✧⌝
                             <br>
                             Multidimensional Ave,
                             <br>
