Corretto l'URL di destinazione nei file footer.html, header.html e index.html per garantire collegamenti funzionanti.

--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 © 2025 GENiALABILE. All Rights Reserved.  
 A Bio-GPT Project—Designed by seiseisette.    
 ---
- 2025 Copyright @seiseisette | x.com/seiseisette
+ 2025 Copyright @seiseisette | https://x.com/seiseisette
 ---
 Licensed under the Apache License, Version 2.0.
 You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
