--- a/header.html
+++ b/header.html
@@ -2,13 +2,13 @@
 © 2025 GENiALABILE. All Rights Reserved.  
 A Bio-GPT Project—Designed by seiseisette.    
 ---
- 2025 Copyright @seiseisette | x.com/seiseisette
+ 2025 Copyright @seiseisette | https://x.com/seiseisette
 ---
 Licensed under the Apache License, Version 2.0.
-You may obtain a copy of the License at https://www.apache.org/licenses/LICENSE-2.0  
+You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
 ---
-https://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
---->
+hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
+---
 header.html
 //-->
 
