Riorganizzato il caricamento dello script dell'header in index.html per migliorare la leggibilità del codice.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
         <!-- Header ------------------------------------------------------------------>
         <script>
             fetch('header.html')
@@ -20,8 +21,8 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                     document.querySelector('head').innerHTML += data;
                 })
                 .catch(error => console.error('Errore nel caricamento dell'header:', error));
-        </script> <!-- Header -->
-
+        </script> 
+        <!-- Header ------------------------------------------------------------------>
     </head>
 
     <body>
