Riorganizzato il codice del footer in index.html per migliorare la leggibilità e la struttura.

--- a/index.html
+++ b/index.html
@@ -80,24 +80,25 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                 <br>
             </p>
 
-        </main> <!-- Contenuto Principale -->
-        
+        </main>
+
 
         <!-- Footer ------------------------------------------------------------------>
-        <script>
-            document.addEventListener('DOMContentLoaded', function() {
-                fetch('footer.html')
-                    .then(response => response.text())
-                    .then(data => {
-                        const body = document.querySelector('body');
-                        const footerContainer = document.createElement('div');
-                        footerContainer.innerHTML = data;
-                        body.appendChild(footerContainer);
-                    })
+            <script>
+                document.addEventListener('DOMContentLoaded', function() {
+                    fetch('footer.html')
+                        .then(response => response.text())
+                        .then(data => {
+                            const body = document.querySelector('body');
+                            const footerContainer = document.createElement('div');
+                            footerContainer.innerHTML = data;
+                            body.appendChild(footerContainer);
+                        })
                     .catch(error => console.error('Errore nel caricamento del footer:', error));
-            });
-        </script> <!-- Footer -->
-      
+                });
+            </script> 
+        <!-- Footer ------------------------------------------------------------------>
+
 
     </body>
 </html>
