--- a/header.html
+++ b/header.html
@@ -32,7 +32,7 @@ header.html
         Variabili CSS§
         ============================= */
         :root {
-            --background-color: #954040;
+            --background-color: #0d5d53;
             --info-background: #000000;
             --info-text: #f4f4f4;
             --borders: #f4f4f4;
@@ -282,4 +282,4 @@ header.html
         }
 
     </style>
-/* ========================================================== */
+<!-- Header -->
