Corretto un errore di sintassi nel gestore degli errori del caricamento dell'header in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
                 })
-                .catch(error => console.error('Errore nel caricamento dell'header:', error);
+                .catch(error => console.error('Errore nel caricamento dell'header', error);
         </script> 
         <!-- Header ------------------------------------------------------------------>
     </head>
