--- a/header.html
+++ b/header.html
@@ -128,10 +128,10 @@ header.html
     .card {
         display: flex; /* Disposizione flessibile per affiancare immagine e testo */
         align-items: center; /* Allinea verticalmente immagine e testo */
-        background-color: #000000; /* Sfondo nero */
+        background-color: #00000000; /* Sfondo nero */
         color: #ffffff; /* Testo bianco */
         padding: 0rem; /* Spaziatura interna */
-        border-radius: 10px; /* Angoli arrotondati */
+        border-radius: 1px; /* Angoli arrotondati */
         box-shadow: 0px 0px 0px #000000; /* Ombreggiatura */
         width: fit-content; /* Adatta la dimensione al contenuto */
         max-width: 100%; /* Evita di uscire dalla pagina */
