--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,7 @@ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2
 hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
 --->
 <!DOCTYPE html>
-<html> 
+<html lang="en">
     <head>
         <!-- Header -->
         <script>
