Rinominato la classe "important-p" in "imp-pless" e aggiunto stile CSS per la nuova classe

--- a/contacts.html
+++ b/contacts.html
@@ -32,7 +32,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <h1>Contact Us</h1>
                 <p style="font-size: 0.6rem;">{Last Updated: 09 January 2025}</p>
 
-            <p class="important-p">
+            <p class="imp-pless">
                 <br><br>
                 <b>0. Welcome to GENiALABILE</b>
                 <br><br>
