--- a/header.html
+++ b/header.html
@@ -249,6 +249,17 @@ header.html + CSS
         text-decoration: underline; 
     }
 
+    .imp-pless a {
+         color:  #00bbff; 
+        text-decoration: none;
+        font-weight: bold; 
+    }
+
+    .imp-pless a:hover {
+        color: #00ff00; 
+        text-decoration: none; 
+    }
+
     .imp-p a {
         color:  #ffff; 
         text-decoration: none;
@@ -269,6 +280,7 @@ header.html + CSS
         color: green; 
         text-decoration: underline; 
     }
+    
 
     a {
         text-decoration: none; 
