Aggiornata la politica sui cookie per riflettere l'assenza di utilizzo dei cookie e modificato il titolo e le sezioni correlate

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -29,16 +29,17 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <!-- Contenuto Principale -->
     <main>
         <!-- Sezione Informazioni -->
-        <h1>Cookie Policy</h1>
+        <h1>No-Cookie Policy</h1>
         <p style="font-size: 0.6rem;">
-            {Last Updated: 09 January 2025}
+            {Last Updated: 10 January 2025}
         </p>
 
         <p class="important-p">
             <br><br>
             <b>0. Welcome to GENiALABILE</b>
             <br><br>
-            GENiALABILE uses cookies and similar tracking technologies to improve user experience, analyze website performance, and deliver personalized content. This policy explains what cookies are, how we use them, and your options for managing cookies.
+            GENiALABILE not uses cookies and similar tracking technologies to improve user experience, analyze website performance, and deliver personalized content.
+            This policy explains what cookies are, why  we do not use them, and your options for managing cookies in other website.
 
             <br><br><br>
             <b>1. What Are Cookies?</b>
@@ -46,7 +47,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             Cookies are small text files that are placed on your device by websites you visit. They serve a variety of purposes, such as remembering your preferences, enabling functionality, and collecting data for analytics.
 
             <br><br><br>
-            <b>2. Types of Cookies We Use</b>
+            <b>2. Types of Cookies We Do Not Use</b>
             <br><br>
             [·] Essential Cookies: Required for the operation of our website. These cookies cannot be disabled.<br>
             [·] Analytics Cookies: Used to gather data on how users interact with our website, including page visits and time spent on pages. We use Google Analytics for this purpose.<br>
